--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -1,7 +1,8 @@
 .login {
+  visibility: visible;
   display:flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   height: 100%;
 
@@ -10,8 +11,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 60rem;
-    width: 40rem;
-
+    height: 22rem;
+    width: 18rem;
   }
 }
