--- a/src/components/common/Card/Card.scss
+++ b/src/components/common/Card/Card.scss
@@ -12,5 +12,6 @@
     box-shadow: 0 0.3rem 0.5rem 0 map-get($colors, dark-background);
     transition: 0.3s;
     border-radius: 0.3rem;
+    margin-top: 2rem ;
   }
 }
