--- a/src/components/common/Logo/Logo.scss
+++ b/src/components/common/Logo/Logo.scss
@@ -1,6 +1,16 @@
+@import '../theme.scss';
+
 .logo {
   font-family: 'Eczar', serif;
   font-weight: 700;
   font-size: 2.5rem;
   margin: 0;
+
+  &--light {
+    color: map-get($colors, light);
+  }
+
+  &--dark {
+    color: map-get($colors, dark-backgound);
+  }
 }
