--- a/src/components/TermsAndConditions/TermsAndConditions.scss
+++ b/src/components/TermsAndConditions/TermsAndConditions.scss
@@ -10,8 +10,8 @@
   min-height: auto;
   background-color: map-get($colors, dark);
   color: map-get($colors, light);
-  margin-top: 6rem;
-  padding: 0 1rem;
+  margin-top: 4.5rem;
+  padding: 1rem;
   font-size: 0.8rem;
 
   &__icon {
@@ -39,5 +39,36 @@
   &__sub-heading {
     align-self: flex-start;
     font-size: 1rem;
+  }
+
+  &__check-input {
+    margin: 1rem 0 4.5rem;
+  }
+
+  &__footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 3rem;
+    padding: 0 2rem 1rem;
+
+    &__button {
+      width: 20.5rem;
+      background-color: map-get($colors, dark);
+    }
+  }
+
+  &__error-message {
+    background-color: map-get($colors, dark);
+    color: map-get($colors, error);
+    margin: 0 0 0.2rem;
+  }
+
+  @media screen and (min-width: 768px){
+    padding: 1rem 9rem;
+    font-size: 0.9rem;
   }
 }
