--- a/src/components/common/theme.scss
+++ b/src/components/common/theme.scss
@@ -2,9 +2,12 @@ $colors: (
   dark-background:#121212,
   dark: #333333,
   error: #cc0000,
+  error-background: rgba(204,0,0, 0.75),
+  error-dark: rgba(47, 5, 12, 0.2),
   light-gray: #A9A9A9,
   light: #fff,
   primary: #397D02
 );
 
 $background-gradient: linear-gradient(147deg, #000000 0%, #434343 74%);
+$notification-box-shadow: 0 1.5rem 4rem 0 rgba(5, 7, 26, 0.25);
