--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -9,6 +9,20 @@
   position: fixed;
   top: 0;
 
+  &__left-item {
+    width: 5.5rem;
+
+    @media screen and (max-width: 600px){
+      width: 0;
+    }
+  }
+
+  &__logo {
+    @media screen and (max-width: 600px){
+      margin-left: -3.5rem;
+    }
+  }
+
   &__logout {
     margin-right: 1rem;
     color: map-get($colors, dark-background);
