--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -15,7 +15,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
   }
 
   @media screen and (max-width: 768px){
