--- a/src/components/common/Logo/Logo.scss
+++ b/src/components/common/Logo/Logo.scss
@@ -5,12 +5,6 @@
   font-weight: 700;
   font-size: 2.5rem;
   margin: 0;
-
-  &--light {
-    color: map-get($colors, light);
-  }
-
-  &--dark {
-    color: map-get($colors, dark-backgound);
-  }
+  color: map-get($colors, light);
+  cursor: default;
 }
