--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -6,7 +6,7 @@ body {
 }
 
 .app {
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   background-color: map-get($colors, dark-background);
   background-image: $background-gradient;
@@ -15,7 +15,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    min-height: 100vh;
   }
 
   @media screen and (max-width: 768px){
