--- a/src/components/common/TextField/TextField.scss
+++ b/src/components/common/TextField/TextField.scss
@@ -37,13 +37,19 @@
     background: transparent;
     outline: none;
     border: none;
-    padding-left: 1rem;
 
     &:focus, &:active {
       & + .text-field__border {
         border-bottom-color: map-get($colors, primary);
       }
     }
+  }
+
+  &__input-icon {
+    position: absolute;
+    right: 0;
+    top: 2.5rem;
+    width: 1.5rem;
   }
 
   &__error-description {
