--- a/src/components/common/theme.scss
+++ b/src/components/common/theme.scss
@@ -1,9 +1,9 @@
 $colors: (
-  dark-background:#121212,
   dark: #333333,
+  dark-700:#121212,
   error: #cc0000,
-  error-background: rgba(204,0,0, 0.75),
-  error-dark: rgba(47, 5, 12, 0.2),
+  error-300: rgba(204,0,0, 0.75),
+  error-900: rgba(47, 5, 12, 0.2),
   light-gray: #A9A9A9,
   light: #fff,
   primary: #397D02
