--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -8,7 +8,7 @@ body {
 .app {
   min-height: 100vh;
   width: 100vw;
-  background-color: map-get($colors, dark-background);
+  background-color: map-get($colors, dark-700);
   background-image: $background-gradient;
 
   &__wrapper {
