--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: map-get($colors, dark-background);
+  background-color: map-get($colors, dark-700);
   width: 100%;
   position: fixed;
   top: 0;
@@ -33,7 +33,7 @@
     text-decoration: none;    
 
     &:hover {
-      color: map-get($colors, dark-background);
+      color: map-get($colors, dark-700);
       background-color: map-get($colors, primary);
     }
   }
