--- a/src/components/common/Card/Card.scss
+++ b/src/components/common/Card/Card.scss
@@ -9,7 +9,7 @@
     width: 30rem;
     height: 35rem;
     background-color: map-get($colors, dark);
-    box-shadow: 0 0.3rem 0.5rem 0 map-get($colors, dark-background);
+    box-shadow: 0 0.3rem 0.5rem 0 map-get($colors, dark-700);
     transition: 0.3s;
     border-radius: 0.3rem;
     margin-top: 2rem ;
